<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_torrent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.applications.fluffy.piratingupdates.Activities.TorrentActivity"
    tools:ignore="Overdraw">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/torrent_container">

        <ImageView
            android:id="@+id/torrent_poster"
            android:layout_width="173dp"
            android:layout_height="260dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/torrent_image_poster_here" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@id/torrent_poster"
            android:layout_toEndOf="@+id/torrent_poster">

            <include
                android:id="@+id/include"
                layout="@layout/activity_torrent_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.constraint.ConstraintLayout>

        <EditText
            android:id="@+id/torrent_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/torrent_poster"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:padding="6dp"
            android:text="@string/desc"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="@dimen/btn_height"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/torrent_download"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:text="@string/download"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>
</LinearLayout>
